Add Slack notification in merge PR job.

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -80,6 +80,14 @@ jobs:
       - run: ./scripts/ci/common/install-gpg-key.sh
       - run: ./scripts/ci/common/configure-git.sh
       - run: ./scripts/ci/steps/merge-pull-request.sh
+      - slack/notify:
+          event: fail
+          channel: dev
+          template: SLACK_FAILURE_NOTIFICATION
+      - slack/notify:
+          event: pass
+          channel: builds
+          template: SLACK_SUCCESS_NOTIFICATION
 workflows:
   version: 2
   pipeline:
@@ -93,6 +101,8 @@ workflows:
           requires:
             - build
       - merge_pull_request:
+          context:
+            - slack
           requires:
             - test
           filters:
