--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,6 +3,33 @@ version: 2.1
 orbs:
   slack: circleci/slack@4.4.2
 
+defaults: &defaults
+  docker:
+    - image: ruby:2.7.5
+
+slack_context: &slack_context
+  context:
+    - slack
+
+only_main: &only_main
+  filters:
+    branches:
+      only:
+        - main
+
+only_dependabot: &only_dependabot
+  filters:
+    branches:
+      only:
+        - /^dependabot.*/
+
+only_main_and_dependabot: &only_main_and_dependabot
+  filters:
+    branches:
+      only:
+        - main
+        - /^dependabot.*/
+
 commands:
   notify:
     steps:
@@ -23,23 +50,21 @@ commands:
 
 jobs:
   build:
-    docker:
-      - image: ruby:2.7.5
+    <<: *defaults
     steps:
       - checkout
       - run: ./scripts/ci/steps/build.sh
       - notify
+
   test:
-    docker:
-      - image: ruby:2.7.5
+    <<: *defaults
     steps:
       - checkout
       - run: ./scripts/ci/steps/test.sh
       - notify
 
   prerelease:
-    docker:
-      - image: ruby:2.7.5
+    <<: *defaults
     steps:
       - checkout
       - configure_for_release
@@ -47,8 +72,7 @@ jobs:
       - notify
 
   release:
-    docker:
-      - image: ruby:2.7.5
+    <<: *defaults
     steps:
       - checkout
       - configure_for_release
@@ -56,8 +80,7 @@ jobs:
       - notify
 
   merge_pull_request:
-    docker:
-      - image: ruby:2.7.5
+    <<: *defaults
     steps:
       - checkout
       - configure_for_release
@@ -69,62 +92,38 @@ workflows:
   pipeline:
     jobs:
       - build:
-          context:
-            - slack
-          filters:
-            branches:
-              only:
-                - main
-                - /^dependabot.*/
+          <<: *only_main_and_dependabot
+          <<: *slack_context
       - test:
-          context:
-            - slack
+          <<: *only_main_and_dependabot
+          <<: *slack_context
           requires:
             - build
-          filters:
-            branches:
-              only:
-                - main
-                - /^dependabot.*/
       - merge_pull_request:
-          context:
-            - slack
+          <<: *only_dependabot
+          <<: *slack_context
           requires:
             - test
-          filters:
-            branches:
-              only: /^dependabot.*/
       - prerelease:
-          context:
-            - slack
+          <<: *only_main
+          <<: *slack_context
           requires:
             - test
-          filters:
-            branches:
-              only: main
       - slack/on-hold:
-          context:
-            - slack
+          <<: *only_main
+          <<: *slack_context
           requires:
             - prerelease
-          filters:
-            branches:
-              only: main
           channel: dev
           template: SLACK_ON_HOLD_NOTIFICATION
       - hold:
+          <<: *only_main
           type: approval
           requires:
             - prerelease
             - slack/on-hold
-          filters:
-            branches:
-              only: main
       - release:
-          context:
-            - slack
+          <<: *only_main
+          <<: *slack_context
           requires:
             - hold
-          filters:
-            branches:
-              only: main
